--- a/20-manual-ssr/index.html
+++ b/20-manual-ssr/index.html
@@ -8,5 +8,13 @@
 <body>
   <!-- <h1>Hello World from HTML!</h1>   -->
    <div id="root">%%%CONTENT%%%</div>
+   <!-- Babel CDN -->
+   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+   <!-- React CDNs -->
+   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+   <script type="text/babel" src="./client.js"></script>
 </body>
 </html>
